# NativeMessageBox

./: .clang-format  .gitignore  404.html  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Directory.Build.props  MAINTENANCE.md  NativeMessageBox.sln  README.md  SECURITY.md  advanced-usage.html  android-packaging.html  architecture.html  build-docs.ps1  building.html  index.html  ios-packaging.html  managed-api.html  manifest.json  release-policy.html  robots.txt  samples.html  serve-docs.ps1  serve-docs.sh  sitemap.xml  version.json  xrefmap.yml
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  ci.yml  docs.yml  native-build.yml  release.yml
api/: NativeMessageBox.AndroidActivityReference.html  NativeMessageBox.AndroidHostOptions.html  NativeMessageBox.MessageBoxButton.html  NativeMessageBox.MessageBoxButtonKind.html  NativeMessageBox.MessageBoxDialogModality.html  NativeMessageBox.MessageBoxIcon.html  NativeMessageBox.MessageBoxInputMode.html  NativeMessageBox.MessageBoxSecondaryContent.html  NativeMessageBox.MessageBoxSeverity.html  NativeMessageBox.NativeMessageBoxException.html  NativeMessageBox.NativeMessageBoxHostOptions.html  NativeMessageBox.html  index.html  toc.html  toc.json
api/NativeMessageBox.AndroidActivityReference/: index.html
api/NativeMessageBox.AndroidActivityReference.-ctor-System.IntPtr-System.Boolean/: index.html
api/NativeMessageBox.AndroidActivityReference.Dispose/: index.html
api/NativeMessageBox.AndroidActivityReference.Handle/: index.html
api/NativeMessageBox.AndroidActivityReference.None/: index.html
api/NativeMessageBox.AndroidActivityReference.OwnsHandle/: index.html
api/NativeMessageBox.AndroidHostOptions/: index.html
api/NativeMessageBox.AndroidHostOptions.ActivityReferenceProvider/: index.html
api/NativeMessageBox.INativeMessageBoxHost/: index.html
api/NativeMessageBox.INativeMessageBoxHost.EnsureInitialized/: index.html
articles/: index.html
css/: lite.css
docs/: abi-spec.md  advanced-usage.md  android-lifecycle.md  android-packaging.md  architecture.md  browser-deployment.md  build-docs.sh  building.md  index.md  ios-packaging.md  managed-api.md  mobile-dialog-ux-analysis.md  native-managed-review.md  project-plan.md  quickstart.md  release-policy.md  roadmap.md  samples.md  troubleshooting.md  web-dialog-ux-analysis.md
include/: README.md  native_message_box.h  native_message_box_test.h
js/: lunet-search.sqlite
samples/: AvaloniaSamples.sln  README.md  run-playground.ps1  run-playground.sh  run-showcase.ps1  run-showcase.sh
site/: config.scriban  menu.yml  readme.md
src/native/: CMakeLists.txt  README.md
src/native/android/: MessageBox.cpp
src/native/android/java/com/nativeinterop/: NativeMessageBoxBridge.java
src/native/ios/: MessageBox.mm
src/native/linux/: message_box.cpp
src/native/macos/: MessageBox.mm
src/native/tests/: sanity_test.c
src/native/web/: message_box.js  wasm_message_box.cpp
src/native/windows/: message_box.cpp
(+309 files in other folders)
